# geomstats-tools

./: .gitignore  LICENSE  Makefile  setup.cfg
cookiecutter_tests/template/: class_short_filename.py  class_short_filename_data.py
release/: release.sh
src/geomstats_tools/: _cli.py  args_manip.py  calatrava_utils.py  config.py  config_utils.py  naming_utils.py  parsing_utils.py  str_utils.py
src/geomstats_tools/add_data_methods/: __init__.py  script.py  utils.py
src/geomstats_tools/add_test_methods/: __init__.py  script.py  utils.py
src/geomstats_tools/cookiecutter_tests/: __init__.py  cookiecutter.py  script.py  utils.py
src/geomstats_tools/cookiecutter_tests/template/: test_class_short_filename.py
src/geomstats_tools/info_tests/: __init__.py  script.py  utils.py
src/geomstats_tools/missing_data_methods/: __init__.py  script.py  utils.py
src/geomstats_tools/sort_data_methods/: __init__.py  script.py  utils.py
standalone/release/: _update_version.py
