[metadata]
name = geomstats_tools
version = attr: geomstats_tools.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = Tools to automate development tasks in geomstats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lpereira95/geomstats-tools
project_urls =
    Bug Tracker = https://github.com/lpereira95/geomstats-tools/issues
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
install_requires =
    click

[options.packages.find]
where = src

[options.extras_require]
lint = 
    flake8
    isort

[options.entry_points]
console_scripts =
    gstools = geomstats_tools._cli:main_cli


[flake8]
ignore = 
    D100, D101, D102, D103, D104, D107
    E203
per-file-ignores =
    */__init__.py: F401
max-line-length = 88


[isort]
multi_line_output = 3
force_grid_wrap = 2
profile = black


[black]
line-length = 88
